en/docs/assets/css/theme.css
/* ... */
.beta-badge {
    display: inline-block;
    background: #ffd600;
    font-size: 14px;
    padding: 5px;
    line-height: 1;
}
.errorcode tbody tr>:nth-child(1) {
    color: white;
    background-color: hsl(14, 100%, 63%);
    display: inline-block;
    padding: 0.2rem 0.6rem;
    border-radius: 4px;
    margin: 0.5rem;
    white-space: nowrap;
}
.md-typeset table:not([class]) th {
    background-color: #e8e8e8;
    color: #4d4d4d;
}



@media screen and (max-width: 767px) {
   .wrapper {
      height: 700px;
   }
}

.content {
   padding-right: 10px;
   width: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
}

@media screen and (max-width: 767px) {
   .content {
      flex-direction: column;
   }
}

.card {
   width: 350px;
   height: 110px;
   color: #404040;
   margin: 10px;
   background: #f8f8f8;
   -webkit-box-shadow: 0px 5px 4px 0px rgba(105, 113, 120, 0.4);
   -moz-box-shadow: 0px 5px 4px 0px rgba(105, 113, 120, 0.4);
   box-shadow: 0px 5px 4px 0px rgba(105, 113, 120, 0.4);
   border-left: 4px solid #f8f8f8;
   border-radius:0;
   font-size: 14px;   
   transition: all 0.3s ease;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
   cursor: pointer;
   transition: all 0.6s ease;
}
.card:hover {
    border-left: 4px solid #ff5003;
}
.line {
	background:#ff5003;
	width:5px;
    height:88px;
    display: none;                                                                                                                           
}
.card-content {
    justify-content: center;
    width: 225px;
    height: 88px;
    display: flex;
    align-items: center;
    text-align: center;
    display: flex;
    flex-direction: column;
    padding-top: 10px;
}

.card-icon {
    width: 50px;
    height: 88px;
    max-width: 80px;
    border-radius: 0%;
    display: flex;
    align-items: center;
    color: #ff5003;
    transition: all 0.8s ease;
}

.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

.card .title {
   width: 225px;
   font-family: Montserrat, sans-serif;
   font-style: normal;
   font-size: 14px;
   margin: 0;
   text-align: left;
   color: 404040;
   font-weight: 600;
   text-transform: uppercase;
   white-space: nowrap;
}

.hint {
  display: block;
  flex-direction: column;
  visibility: visible;
  text-align: left;
}

.md-typeset .hint {
    margin: 5px 0;
}

.card .text {
   width: 80%;
   margin: 0 auto;
   font-style: normal;
   font-size: 10px;
   text-align: left;
   margin-top: 10px;
   line-height: 1;
   color: white;
   font-weight: 400;
   opacity: 0;
   max-height:0;

}

@media screen and (min-width: 767px) {
    .leftContent {
        float:left; 
        width: 35%;
        text-align:justify;
        max-height:100%;
    }
    .rightImage {
        float:centre;
        width: 60%;
        text-align:left; 
        flex-shrink: 0;
        min-width: 35%;
        max-height: 100%;
        max-width:100%;
        margin-left:10px;
    }
 }

@media screen and (min-width: 767px) {
    .leftContentOverview {
        float:left;
        width: 65%;
        text-align:justify;
        max-height:100%;
    }
    .rightContentOverview {
            float:right;
            width: 65%;
            text-align:justify;
            max-height:100%;
     }

    .rightImageOverview {
            float:left;
            width: 15% !important;
            text-align:center;
            flex-shrink: 0;
            min-width: 15% !important;
            max-height: 15% !important;
            max-width: 15% !important;
            margin-left:40px !important;
            margin-top:20px !important;
    }

    .leftImageOverview {
            float:left;
            width: 12% !important;
            text-align:center;
            flex-shrink: 0;
            min-width: 12% !important;
            max-height: 15% !important;
            max-width:12%  0% !important;
            margin-left:40px !important;
            margin-top:20px !important;

     }
 }


.md-sidebar ::-webkit-scrollbar {
    width: 5px;
}

.md-sidebar ::-webkit-scrollbar-track {
    background: #f1f1f1;
}

.md-sidebar ::-webkit-scrollbar-thumb {
    background: #888;
    border-radius: 2.5px;
}

.md-sidebar__scrollwrap {
    margin: 0;
}

.md-search-loader {
    border: 2px solid #f3f3f3;
    border-radius: 50%;
    border-top: 2px solid #3498db;
    width: 25px;
    height: 25px;
    -webkit-animation: xspin 2s linear infinite; /* Safari */
    animation: xspin 2s linear infinite;
 }

.md-search-loader:before {
    content: none !important;
 }

/* Safari */
@-webkit-keyframes xspin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes xspin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.ds-suggestions {
    font-size: 0.75rem;
}

/* Title (eg. Bootstrap CDN) */
  .algolia-autocomplete .algolia-docsearch-suggestion--title {
    font-weight: bold;
    color: #351700 !important;
  }

  /* Highlighted text */
  .algolia-autocomplete .algolia-docsearch-suggestion--highlight {
    color: #f47b20 !important;
    background-color: #ffaa001f !important
  }

  .algolia-autocomplete .ds-dropdown-menu .ds-suggestion.ds-cursor .algolia-docsearch-suggestion.suggestion-layout-simple {
    background-color: #ffaa001f !important;
  }

  .algolia-autocomplete .ds-dropdown-menu .ds-suggestion.ds-cursor .algolia-docsearch-suggestion:not(.suggestion-layout-simple) .algolia-docsearch-suggestion--content {
    background-color: #ffaa001f !important;
  }

